--- a/recipe-app-frontend/src/styles/globals.css
+++ b/recipe-app-frontend/src/styles/globals.css
@@ -35,10 +35,13 @@ a:hover {
   color: red;
 }
 
-h2, h3, p, ul{
+h2,
+h3,
+p,
+ul {
   margin-bottom: 0.8rem;
 }
 
-ul{
+ul {
   padding-left: 1.5rem;
 }
