--- a/recipe-app-frontend/src/app/layout.module.css
+++ b/recipe-app-frontend/src/app/layout.module.css
@@ -1,27 +1,43 @@
-.body{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
-    color: var(--primary-color);
-    background-color: var(--primary-bg);
+.body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(70, 160, 70);
 }
 
-.main{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    flex-grow: 1;
-    max-width: var(--max-width);
-    margin: 1rem auto;
-    padding: 0 1rem;
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3rem;
+  min-height: 100vh;
+  max-width: 1100px;
 }
 
-.footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.main h1 {
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: var(--secondary-bg);
+  color: var(--secondary-color);
+}
+
+/* Mobile */
+@media screen and (max-width: 700px) {
+  .main {
+    max-width: 100%;
     padding: 1rem;
-    background-color: var(--secondary-bg);
-    color: var(--secondary-color);
+    margin: 0rem 1rem;
+  }
+
+  .main h1 {
+    font-size: 1.5rem;
+    padding-top: 1rem;
+  }
 }
