--- a/recipe-app-frontend/src/styles/globals.css
+++ b/recipe-app-frontend/src/styles/globals.css
@@ -1,18 +1,43 @@
 :root {
-  --max-width: 980px;
-  --border-radius: 8px;
+  --max-width: 1100px;
+  --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --primary-bg: #f8f8f8; /* Bakgrund */
-  --primary-color: #333; /* Textfärg */
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
 
-  --secondary-bg: #333; /* Bakgrund */
-  --secondary-color: #f8f8f8; /* Textfärg */
+  --primary-glow: conic-gradient(
+    from 180deg at 50% 50%,
+    #16abff33 0deg,
+    #0885ff33 55deg,
+    #54d6ff33 120deg,
+    #0071ff33 160deg,
+    transparent 360deg
+  );
+  --secondary-glow: radial-gradient(
+    rgba(255, 255, 255, 1),
+    rgba(255, 255, 255, 0)
+  );
 
-  --input-spacing: 0.5rem;
-  --input-border: 1px solid #ccc;
+  --tile-start-rgb: 239, 245, 249;
+  --tile-end-rgb: 228, 232, 233;
+  --tile-border: conic-gradient(
+    #00000080,
+    #00000040,
+    #00000030,
+    #00000020,
+    #00000010,
+    #00000010,
+    #00000080
+  );
+
+  --callout-rgb: 238, 240, 241;
+  --callout-border-rgb: 172, 175, 176;
+  --card-rgb: 180, 185, 188;
+  --card-border-rgb: 131, 134, 135;
 }
 
 * {
@@ -27,21 +52,21 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
 a {
-  color: blue;
+  color: inherit;
+  text-decoration: none;
 }
 
 a:hover {
-  color: red;
-}
-
-h2,
-h3,
-p,
-ul {
-  margin-bottom: 0.8rem;
-}
-
-ul {
-  padding-left: 1.5rem;
+  color: rgb(184, 240, 110);
 }
