--- a/recipe-app-frontend/src/app/layout.module.css
+++ b/recipe-app-frontend/src/app/layout.module.css
@@ -9,14 +9,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3rem;
+  padding: 1rem;
   min-height: 100vh;
   max-width: 1100px;
+  width: 100%;
 }
 
 .main h1 {
   padding-bottom: 2rem;
   text-align: center;
+}
+
+.main h2,
+.main h3 {
+  padding: 0.2rem;
 }
 
 .footer {
@@ -39,5 +45,14 @@
   .main h1 {
     font-size: 1.5rem;
     padding-top: 1rem;
+  }
+
+  .main h2 {
+    font-size: 1.3rem;
+    padding-bottom: 1rem;
+  }
+
+  .main h3 {
+    font-size: 1rem;
   }
 }
