--- a/recipe-app-frontend/src/components/layout/Navigation.module.css
+++ b/recipe-app-frontend/src/components/layout/Navigation.module.css
@@ -1,12 +1,16 @@
 .nav {
   display: flex;
   justify-content: center;
+  background-color: rgba(0, 110, 0, 0.658);
+  padding: 0rem 2rem;
+  border-radius: var(--border-radius);
   max-width: 100%;
   margin: 0rem 2rem;
 }
 
 .card {
-  padding: 1rem 1.2rem;
+  display: flex;
+  padding: 0.8rem 1.2rem;
   font-weight: 500;
   font-size: 1.2rem;
 }
@@ -23,7 +27,7 @@
   .nav {
     display: flex;
     justify-content: center;
-    max-width: 100%;
+    max-width: 100vw;
     margin: 0rem 2rem;
   }
 
